--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-color: darkblue !important;
         }
         .highlighted .note-label {
-            color: white !important;
+            color: rgb(185, 0, 0) !important;
         }
         .note-label {
             position: absolute;
