--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             z-index: 1;
         }
         .highlighted {
-            background-color: darkblue !important;
+            background-color: rgb(48, 48, 226) !important;
         }
         .highlighted .note-label {
             color: rgb(185, 0, 0) !important;
@@ -36,6 +36,7 @@
             bottom: 5px;
             left: 2px;
             font-size: 10px;
+            color: rgb(185, 0, 0) !important;
         }
         .trackbar-container {
             margin-top: 20px;
