--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             position: relative;
             height: 100px;
         }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #f1f1f1;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -65,6 +74,13 @@
     <div class="trackbar-container">
         <input type="range" id="trackbar" min="0" max="11" value="0">
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <p>Songwriting Companion © JSikken, 2024</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
