--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             bottom: 0;
             width: 100%;
         }
+        body {
+            background-color: #d8d8d8;
+        }
     </style>
 </head>
 <body>
