--- a/index.html
+++ b/index.html
@@ -54,12 +54,32 @@
             bottom: 0;
             width: 100%;
         }
+        header {
+            background-color: #f1f1f1;
+            color: rgb(59, 59, 59);
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+        header h1 {
+            margin: 0;
+        }
         body {
             background-color: #d8d8d8;
         }
     </style>
+    <header>
+        <h1>Sikken's Songwriting Companion</h1>
+    </header>
 </head>
 <body>
+    <br>
+    <br>
+    <br>
+    <br>
     <div>
         <label for="majorBox">Majors</label>
         <input type="text" id="majorBox" readonly>
