--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Songwriting Companion</title>
     <style>
-        /* Voeg hier je CSS styling toe */
         .piano-key {
             display: inline-block;
             width: 20px;
@@ -69,42 +68,39 @@
         }
         body {
             background-color: #d8d8d8;
+            text-align: center; /* Center content inside body */
+            padding-top: 60px; /* Space for the fixed header */
+            padding-bottom: 60px; /* Space for the fixed footer */
+        }
+        .content {
+            display: inline-block;
+            text-align: left; /* Reset text alignment inside content */
         }
     </style>
+</head>
+<body>
     <header>
         <h1>Sikken's Songwriting Companion</h1>
     </header>
-</head>
-<body>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div>
-        <label for="majorBox">Majors</label>
-        <input type="text" id="majorBox" readonly>
+    <div class="content">
+        <div>
+            <label for="majorBox">Majors</label>
+            <input type="text" id="majorBox" readonly>
+            <br>
+        </div>
+        <div id="pianoRollMajors" class="piano-roll"></div>
         <br>
-    </div>
-    <div id="pianoRollMajors" class="piano-roll"></div>
-    <br>
-    <div>
-        <label for="minorBox">Minors</label>
-        <input type="text" id="minorBox" readonly>
+        <div>
+            <label for="minorBox">Minors</label>
+            <input type="text" id="minorBox" readonly>
+            <br>
+        </div>
+        <div id="pianoRollMinors" class="piano-roll"></div>
         <br>
+        <div class="trackbar-container">
+            <input type="range" id="trackbar" min="0" max="11" value="0">
+        </div>
     </div>
-    <div id="pianoRollMinors" class="piano-roll"></div>
-    <br>
-    <div class="trackbar-container">
-        <input type="range" id="trackbar" min="0" max="11" value="0">
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
     <footer>
         <p>Songwriting Companion © JSikken, 2024</p>
     </footer>
