--- a/index.html
+++ b/index.html
@@ -45,19 +45,28 @@
             height: 100px;
         }
         footer {
+            background-color: #F7F7F7;
+            opacity: 1;
+            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), linear-gradient(225deg, #FFFFFF 25%, transparent 25%), linear-gradient(45deg, #FFFFFF 25%, transparent 25%), linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
+            background-position:  17px 0, 17px 0, 0 0, 0 0;
+            background-size: 34px 34px;
+            background-repeat: repeat;
             text-align: center;
             padding: 10px;
-            background-color: #f1f1f1;
             position: fixed;
             left: 0;
             bottom: 0;
             width: 100%;
         }
         header {
-            background-color: #f1f1f1;
-            color: rgb(59, 59, 59);
-            padding: 10px;
+            background-color: #F7F7F7;
+            opacity: 1;
+            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), linear-gradient(225deg, #FFFFFF 25%, transparent 25%), linear-gradient(45deg, #FFFFFF 25%, transparent 25%), linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
+            background-position:  17px 0, 17px 0, 0 0, 0 0;
+            background-size: 34px 34px;
+            background-repeat: repeat;
             text-align: center;
+            padding: 10px;
             position: fixed;
             top: 0;
             width: 100%;
@@ -106,6 +115,8 @@
     <header>
         <h1>Sikken's Songwriting Companion</h1>
     </header>
+    <br>
+    <br>
     <br>
     <br>
     <div class="content">
