--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Songwriting Companion</title>
     <style>
         .piano-key {
@@ -47,7 +47,10 @@
         footer {
             background-color: #F7F7F7;
             opacity: 1;
-            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), linear-gradient(225deg, #FFFFFF 25%, transparent 25%), linear-gradient(45deg, #FFFFFF 25%, transparent 25%), linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
+            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(225deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(45deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
             background-position:  17px 0, 17px 0, 0 0, 0 0;
             background-size: 34px 34px;
             background-repeat: repeat;
@@ -57,11 +60,15 @@
             left: 0;
             bottom: 0;
             width: 100%;
+            box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.5);
         }
+
         header {
             background-color: #F7F7F7;
-            opacity: 1;
-            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), linear-gradient(225deg, #FFFFFF 25%, transparent 25%), linear-gradient(45deg, #FFFFFF 25%, transparent 25%), linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
+            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(225deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(45deg, #FFFFFF 25%, transparent 25%), 
+                                linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
             background-position:  17px 0, 17px 0, 0 0, 0 0;
             background-size: 34px 34px;
             background-repeat: repeat;
@@ -69,8 +76,11 @@
             padding: 10px;
             position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             width: 100%;
             z-index: 1000;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Drop shadow for header */
         }
         header h1 {
             margin: 0;
@@ -139,7 +149,7 @@
         </div>
         <div class="rhyme-container">
             <label for="rhymeBox">Rhyme words</label>
-            <input type="text" id="rhymeBox" placeholder="Enter a word">
+            <input type="text" id="rhymeBox" placeholder="Enter a word"><br>
             <div id="rhymeResults" class="rhyme-words"></div>
             <br>
             <br>
