--- a/index.html
+++ b/index.html
@@ -131,15 +131,15 @@
     <br>
     <div class="content">
         <div>
-            <label for="majorBox">Majors</label><br>
-            <input type="text" id="majorBox" readonly>
+            <label for="majorBox">Majors</label>
+            <input type="text" id="majorBox" readonly><br>
             <br>
         </div>
         <div id="pianoRollMajors" class="piano-roll"></div>
         <br>
         <div>
-            <label for="minorBox">Minors</label><br>
-            <input type="text" id="minorBox" readonly>
+            <label for="minorBox">Minors</label>
+            <input type="text" id="minorBox" readonly><br>
             <br>
         </div>
         <div id="pianoRollMinors" class="piano-roll"></div>
