--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <input type="range" id="trackbar" min="0" max="11" value="0">
         </div>
         <div class="rhyme-container">
-            <label for="rhymeBox">Rhyme words</label>
+            <label for="rhymeBox">Rhyme words (English only)</label>
             <input type="text" id="rhymeBox" placeholder="Enter a word"><br>
             <div id="rhymeResults" class="rhyme-words"></div>
             <br>
