--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
+        .notepad-container {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .notepad-container textarea {
+            width: 100%;
+            height: 200px;
+            margin-bottom: 10px;
+        }
+        .notepad-container button {
+            margin: 5px;
+        }
     </style>
 </head>
 <body>
@@ -156,6 +170,16 @@
             <br>
             <br>
         </div>
+    </div>
+    <div class="notepad-container">
+        <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
+        <input type="file" id="fileInput" style="display: none;">
+        <button onclick="importFile()">Import .txt</button>
+        <button onclick="saveFile()">Save .txt</button>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
     <br>
     <footer>
