--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -129,6 +130,18 @@
             width: 100%;
             height: 200px;
             margin-bottom: 10px;
+            background: repeating-linear-gradient(
+                to bottom,
+                #d3d3d3,
+                #d3d3d3 1px,
+                transparent 1px,
+                transparent 20px
+            );
+            line-height: 20px;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
         .notepad-container button {
             margin: 5px;
@@ -170,6 +183,7 @@
         </div>
     </div>
     <div class="notepad-container">
+        <label for="notepad">Songwriting Notepad</label>
         <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
         <input type="file" id="fileInput" style="display: none;">
         <button onclick="importFile()">Import .txt</button>
