--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
             font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            background-color: #000000
         }
         .notepad-container button {
             margin: 5px;
