--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
         </div>
     </div>
     <div class="notepad-container">
+        <label for="titleBox">Title</label>
+        <input type="text" id="titleBox" placeholder="Enter song title"><br>
         <label for="notepad">Songwriting Notepad</label>
         <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
         <input type="file" id="fileInput" style="display: none;">
