--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -144,8 +143,9 @@
             border-radius: 4px;
             background-color: #FFFD90
         }
-        .notepad-container button {
-            margin: 5px;
+        .notepad-container .button-container {
+            display: flex;
+            gap: 10px;
         }
         #titleBox {
             background-color: #FFFD90;
@@ -189,12 +189,15 @@
         </div>
     </div>
     <div class="notepad-container">
+        <div class="button-container">
+            <button onclick="importFile()">Import .txt</button>
+            <button onclick="saveFile()">Save .txt</button>
+        </div>
         <label for="titleBox">Songwriting Notepad</label>
         <input type="text" id="titleBox" placeholder="Enter song title">
         <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
         <input type="file" id="fileInput" style="display: none;">
-        <button onclick="importFile()">Import .txt</button>
-        <button onclick="saveFile()">Save .txt</button>
+        
         <br>
         <br>
         <br>
