--- a/index.html
+++ b/index.html
@@ -148,10 +148,14 @@
             gap: 10px;
         }
         #titleBox {
-            background-color: #FFFD90;
-            width: 100%;
-            border: none;
-        }
+        background-color: #FFFD90;
+        width: 100%;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 8px;
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
     </style>
 </head>
 <body>
