--- a/index.html
+++ b/index.html
@@ -127,8 +127,9 @@
         }
         .notepad-container textarea {
             width: 100%;
-            height: 435px;
+            height: 835px;
             margin-bottom: 24px;
+            outline: none;
             background: repeating-linear-gradient(
                 to bottom,
                 #d3d3d3,
@@ -155,6 +156,7 @@
         padding: 8px;
         font-size: 16px;
         margin-bottom: 0px;
+        outline: none;
     }
     </style>
 </head>
