--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
             margin: 0;
         }
         body {
-            background-color: #ffffff;
+            background-color: #ececec;
             opacity: 1;
-            background-image:  linear-gradient(135deg, #f7f7f7 25%, transparent 25%), linear-gradient(225deg, #f7f7f7 25%, transparent 25%), linear-gradient(45deg, #f7f7f7 25%, transparent 25%), linear-gradient(315deg, #f7f7f7 25%, #ffffff 25%);
-            background-position:  10px 0, 10px 0, 0 0, 0 0;
-            background-size: 20px 20px;
+            background-size: 10px 10px;
+            background-image: repeating-linear-gradient(45deg, #ffffff 0, #ffffff 1px, #ececec 0, #ececec 50%);
             background-repeat: repeat;
-            padding-top: 60px; /* Space for the fixed header */
-            padding-bottom: 60px; /* Space for the fixed footer */
+            padding-top: 60px;
+            padding-bottom: 60px;
         }
         .content {
             display: flex;
