--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         .piano-roll {
             position: relative;
             height: 100px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
         }
         footer {
             background-color: #F7F7F7;
@@ -80,7 +81,7 @@
             right: 0;
             width: 100%;
             z-index: 1000;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Drop shadow for header */
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
         }
         header h1 {
             margin: 0;
@@ -98,7 +99,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            text-align: left; /* Reset text alignment inside content */
+            text-align: left;
         }
         .rhyme-container {
             margin-top: 20px;
@@ -200,7 +201,6 @@
         <input type="text" id="titleBox" placeholder="Enter song title">
         <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
         <input type="file" id="fileInput" style="display: none;">
-        
         <br>
         <br>
         <br>
