--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         .piano-roll {
             position: relative;
             height: 100px;
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+            
         }
         footer {
             background-color: #F7F7F7;
@@ -130,14 +130,8 @@
             height: 835px;
             margin-bottom: 24px;
             outline: none;
-            background: repeating-linear-gradient(
-                to bottom,
-                #d3d3d3,
-                #d3d3d3 1px, 
-                transparent 1px,
-                transparent 25px
-            );
-            line-height: 25px;
+            
+
             padding: 8px;
             font-size: 16px;
             border: 1px solid #ccc;
@@ -166,7 +160,7 @@
     </header>
     <br>
     <br>
-        <div class="content">
+    <div class="content">
         <br>
         <label for="scaleType">Select Scale Type:</label>
         <select id="scaleType" onchange="updateScaleType()">
@@ -174,11 +168,15 @@
             <option value="phrygian">Phrygian</option>
         </select>
         <br>
+        <div>
+            <label for="majorBox">Majors</label>
+            <input type="text" id="majorBox" readonly><br>
+            <br>
         </div>
         <div id="pianoRollMajors" class="piano-roll"></div>
         <br>
         <div>
-            <label for="minorBox">Minors</label>
+            <label for="minorBox">Minors</label><br>
             <input type="text" id="minorBox" readonly><br>
             <br>
         </div>
@@ -195,7 +193,7 @@
             <br>
         </div>
     </div>
-    <div class="notepad-container">
+       <div class="notepad-container">
         <div class="button-container">
             <label for="titleBox">Songwriting Notepad</label>
             <button onclick="importFile()">Import .txt</button>
