--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         #piano-roll-container {
-            position: relative;
+            position: center;
             height: 100px; /* Pas dit aan naar wens */
             width: fit-content; /* Zorg ervoor dat de container alleen zo breed is als de inhoud */
         }
