--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100%; /* Pas dit aan naar wens */
-            height: auto; /* Pas dit aan naar wens */
-            margin: 0 auto; /* Zorg ervoor dat de wrapper zelf gecentreerd is */
+            width: 100%; /* Ensure it takes the full width of the parent */
+            height: auto; /* Adjust as needed */
+            margin: 0 auto; /* Center the wrapper itself */
         }
 
         #piano-roll-container {
             position: relative;
-            height: 100px; /* Pas dit aan naar wens */
-            width: fit-content; /* Zorg ervoor dat de container alleen zo breed is als de inhoud */
+            height: 100px; /* Adjust as needed */
+            width: fit-content; /* Adjust as needed */
         }
 
         .piano-key {
@@ -167,7 +167,7 @@
         }
         .piano-key {
             position: absolute;
-            width: 20px; /* Breedte van een witte toets */
+            width: 20px; /* Width of a white key */
             height: 100px;
             border: 1px solid black;
             box-sizing: border-box;
@@ -178,7 +178,7 @@
         }
 
         .black-key {
-            width: 14px; /* Breedte van een zwarte toets */
+            width: 14px; /* Width of a black key */
             height: 60px;
             background-color: black;
             z-index: 1;
