--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             position: relative;
             height: 100px; /* Adjust as needed */
             width: fit-content; /* Adjust as needed */
+            justify-content: center;
         }
 
         .piano-key {
