--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             height: 100px; /* Adjust as needed */
             width: fit-content; /* Adjust as needed */
             justify-content: center;
+            align-items: center;
         }
 
         .piano-key {
