--- a/index.html
+++ b/index.html
@@ -71,15 +71,11 @@
             
         }
         footer {
-            background-color: #F7F7F7;
-            opacity: 1;
-            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(225deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(45deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
-            background-position:  17px 0, 17px 0, 0 0, 0 0;
-            background-size: 34px 34px;
-            background-repeat: repeat;
+            background-color: #565656;
+            opacity: 0.8;
+            background-image:  radial-gradient(#f7ca45 0.5px, transparent 0.5px), radial-gradient(#f7ca45 0.5px, #565656 0.5px);
+            background-size: 20px 20px;
+            background-position: 0 0,10px 10px;
             text-align: center;
             padding: 10px;
             position: fixed;
@@ -90,14 +86,11 @@
         }
 
         header {
-            background-color: #F7F7F7;
-            background-image:  linear-gradient(135deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(225deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(45deg, #FFFFFF 25%, transparent 25%), 
-                                linear-gradient(315deg, #FFFFFF 25%, #F7F7F7 25%);
-            background-position:  17px 0, 17px 0, 0 0, 0 0;
-            background-size: 34px 34px;
-            background-repeat: repeat;
+            background-color: #565656;
+            opacity: 0.8;
+            background-image:  radial-gradient(#f7ca45 0.5px, transparent 0.5px), radial-gradient(#f7ca45 0.5px, #565656 0.5px);
+            background-size: 20px 20px;
+            background-position: 0 0,10px 10px;
             text-align: center;
             padding: 10px;
             position: fixed;
@@ -112,11 +105,10 @@
             margin: 0;
         }
         body {
-            background-color: #ececec;
-            opacity: 1;
+            background-color: #565656;
+            opacity: 0.8;
+            background-image: radial-gradient(#f7ca45 0.5px, #565656 0.5px);
             background-size: 10px 10px;
-            background-image: repeating-linear-gradient(45deg, #ffffff 0, #ffffff 1px, #ececec 0, #ececec 50%);
-            background-repeat: repeat;
             padding-top: 60px;
             padding-bottom: 60px;
         }
