--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             left: 0;
             bottom: 0;
             width: 100%;
+            color: #F7CA45;
             box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.5);
         }
 
@@ -99,6 +100,7 @@
             right: 0;
             width: 100%;
             z-index: 1000;
+            color: #F7CA45;
             box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
         }
         header h1 {
