--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         header h1 {
             margin: 0;
         }
+        header h4 {
+            color: #F7CA45;
+            font-size: 10px;
+        }
         body {
             background-color: #565656;
             opacity: 0.8;
