--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <header>
         <h1>Sikken's Songwriting Companion</h1>
         <p>Songwriting Companion © Joppe Sikken, 2024</p>
-        <p>Rhyme database © Datamuse, 2024</p>
+        <h4>Rhyme database © Datamuse, 2024</h4>
     </header>
     <br><br><br><br><br><br><br>
     <div class="content">
