--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
             height: 835px;
             margin-bottom: 24px;
             outline: none;
+            background: repeating-linear-gradient(
+                to bottom,
+                #d3d3d3,
+                #d3d3d3 1px, 
+                transparent 1px,
+                transparent 25px
+            );
+            line-height: 25px;
             padding: 8px;
             font-size: 16px;
             border: 1px solid #ccc;
@@ -244,11 +252,14 @@
         </div>
     </div>
     <div class="notepad-container">
-        <label for="notepad">Songwriting Notepad</label>
+        <div class="button-container">
+            <label for="titleBox">Songwriting Notepad</label>
+            <button onclick="importFile()">Import .txt</button>
+            <button onclick="saveFile()">Save .txt</button>
+        </div>
+        <input type="text" id="titleBox" placeholder="Enter song title">
         <textarea id="notepad" placeholder="Write your lyrics or notes here..."></textarea>
         <input type="file" id="fileInput" style="display: none;">
-        <button onclick="importFile()">Import .txt</button>
-        <button onclick="saveFile()">Save .txt</button>
         <br>
         <br>
         <br>
