--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             background-size: 10px 10px;
             padding-top: 60px;
             padding-bottom: 60px;
+            touch-action: none;
         }
         .content {
             display: flex;
