--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         }
         header h1 {
             margin: 0;
+            font-size: 12px;
         }
         header h4 {
             color: #F7CA45;
@@ -215,7 +216,7 @@
 <body>
     <header>
         <h1>Sikken's Songwriting Companion</h1>
-        <p>Songwriting Companion © Joppe Sikken, 2024</p>
+        <h4>Songwriting Companion © Joppe Sikken, 2024</h4>
         <h4>Rhyme database © Datamuse, 2024</h4>
     </header>
     <br><br><br><br><br><br><br>
