--- a/index.html
+++ b/index.html
@@ -255,8 +255,9 @@
     </div>
     <div class="notepad-container">
         <div class="button-container">
-        <button id="saveButton">Save .txt</button>
-        <button id="importButton">Import .txt</button>
+            <button id="saveButton">Save .txt</button>
+            <button id="importButton">Import .txt</button>
+            <input type="file" id="fileInput" style="display: none;">
         <input type="file" id="fileInput" accept=".txt" style="display: none;">
         </div>
         <input type="text" id="titleBox" placeholder="Enter song title">
